# Yield-Prediction-Model-for-Sauce-Flavor-Baijiu

./: .gitignore  README.md  app.py  main.py  predict.py  pyproject.toml  train.py
datasets/: 0502R1-2-yield-ml.csv  0503R3-5-yield-ml.csv  0503R6-7-yield-ml.csv
models/R1-2/: knn.joblib  linearregression.joblib  svr.joblib  xgboost.joblib
models/R3-5/: knn.joblib  linearregression.joblib  svr.joblib  xgboost.joblib
models/R6-7/: knn.joblib  linearregression.joblib  svr.joblib  xgboost.joblib
