[project]
name = "Yield-Prediction-Model-for-Sauce-Flavor-Baijiu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.5.1",
    "pandas[excel]>=2.3.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "streamlit>=1.45.1",
    "xgboost>=3.0.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "notebook>=7.4.3",
]

[tool.poetry]
package-mode = false
